src/main/java/org/example/errors/UserIsEmptyException.java
package org.example.errors;

public class UserIsEmptyException extends RuntimeException {
    public UserIsEmptyException() {
        super("User is empty");
    }

}
